# Hermes-MemVault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  SOUL.md  pyproject.toml
docs/: memvault-experience-report-2026-06-12.md  memvault-experience-report-2026-06-13.md
hermes_memv/: __init__.py  cli.py  config.py  emotion.py  kg_bridge.py  qwen_embedder.py
hermes_memv/core/: __init__.py  compressor.py  consolidator.py  engine.py  formatter.py
hermes_memv/embedding/: __init__.py  mock.py  ollama.py
hermes_memv/llm/: __init__.py  mock.py
hermes_memv/retrieval/: __init__.py  colbert.py  dense.py  hybrid.py  sparse.py
hermes_memv/storage/: __init__.py  base.py  file.py  memory.py  sqlite.py
patches/: conversation_loop_snippet.py  memory_tool.py  system_prompt.py
